--- a/templates/index.html
+++ b/templates/index.html
@@ -306,7 +306,7 @@
                             <strong>Course Name: ${course.course_name}</strong>
                         </div>
                         <div class="card-body">
-                            <p><strong>Stedenten:</strong></p>
+                            <p><strong>Studenten:</strong></p>
                             <ul class="list-group">
                 `;
 
